# Asig

./: .gitignore  CLAUDE.md  Cargo.toml  DEV.md  FIX.md  README.md  SECURITY.md  clippy.toml  deny.toml  pyproject.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  codeql.yml  deny-weekly.yml  stale.yml
crates/app/: Cargo.toml
crates/app/src/: animation.rs  app_delegate.rs  main.rs  overlay.rs  palette.rs  panel.rs  settings.rs  tray.rs
crates/core/: Cargo.toml
crates/core/src/: aggregate.rs  claude.rs  config.rs  lib.rs  openclaw.rs  source.rs  status.rs
scripts/: make-app.sh  preview_anims.py  repair_statuskit_block.py
