[project]
name = "asig-scripts"
version = "0.1.0"
description = "Auxiliary Python scripts for Asig (menu-bar-icon repair, animation preview)."
# 兼容 3.13;默认用 3.14(见 .python-version)。脚本仅用标准库,无运行期依赖。
requires-python = ">=3.13"

# 脚本不是可安装的 Python 包,只是项目辅助脚本。
[tool.uv]
package = false

[dependency-groups]
# python-style.md 规定用 ruff;放 dev 组,`uv sync` 后即可 `uv run ruff check/format`。
dev = ["ruff>=0.6"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
# E/F: pycodestyle/pyflakes;I: import 排序;UP: pyupgrade;B: bugbear。
select = ["E", "F", "I", "UP", "B"]
