[package]
name = "agent-light"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "agent-light"
path = "src/main.rs"

[dependencies]
agent-light-core = { path = "../core" }

# objc2 生态:保持在最新发布线(0.6 / framework 0.3)。define_class! 新宏语法。
# ⚠️ 类型/协议默认藏在 cargo feature 后,必须按需开启。
objc2            = "0.6"
block2           = "0.6" # NSColor colorWithDynamicProvider 的 ObjC block 闭包(匹配 objc2-app-kit 0.3 的 block2)
objc2-core-foundation = "0.3" # CGFloat(NSRect/NSPoint 用)在 0.6 起搬到这里
objc2-foundation = { version = "0.3", features = [
    "NSString", "NSTimer", "NSObject", "NSNotification",
    "NSGeometry", # NSRect/NSPoint/NSSize/CGFloat
    "NSValue",    # NSNumber:脉冲动画的 from/to 值
] }
objc2-app-kit = { version = "0.3", features = [
    # NSApplication 的 struct 实际挂在 NSResponder feature 下(parent-feature 门控),
    # 故父类链也要开。
    "NSResponder",
    "NSApplication",
    "NSStatusBar",
    "NSStatusItem",
    "NSStatusBarButton",
    "NSMenu",
    "NSMenuItem",
    "NSButton",
    "NSControl",
    "NSView",
    "NSImage", # 菜单栏自绘圆点 + 底栏 SF Symbol 单色图标
    "NSBox",   # 设置页分组圆角卡片(stats.app 风)
    "NSVisualEffectView", # 设置页材质(sidebar/contentBackground/windowBackground)
    "NSViewController",   # 方案 A:包 sidebar/content 视图给 NSSplitViewItem
    "NSSplitViewController",
    "NSSplitViewItem",
    "NSSwitch", # 设置页开关(滑动开关,原生)
    # Phase 2 浮窗:
    "NSWindow",
    "NSColor",
    "NSBezierPath",
    "NSGraphics",
    # Phase 2.5 设置面板:
    "NSTextField",
    "NSScreen",
    "NSFont",
    "NSSlider",
    "NSPopUpButton",
    "NSAppearance", # Theme setAppearance + NSColor dynamicProvider
    "NSColorList",  # NSColor colorWithName:dynamicProvider: 需此 feature
] }
# CoreAnimation:CALayer 透明度脉冲(交 render server 驱动,app CPU ~0%)。
objc2-quartz-core = { version = "0.3", features = [
    "CALayer",
    "CAAnimation", # 含 CABasicAnimation
    "CAMediaTiming",
    "CAMediaTimingFunction",
    "CATransform3D", # 波纹「绕圆心缩放」变换动画(绕开 layer-backed 视图 anchorPoint 被重置的问题)
] }
